ExclusionManagerに元データ確認機能を追加

--- a/src/components/admin/data-sync/ExclusionManagerItem.module.css
+++ b/src/components/admin/data-sync/ExclusionManagerItem.module.css
@@ -40,6 +40,12 @@
   min-width: 0;
 }
 
+.headerRight {
+  display: flex;
+  align-items: center;
+  flex-shrink: 0;
+}
+
 .textGroup {
   display: flex;
   flex-direction: column;
